# spdk

./: .gitignore  .gitmodules  cfg.sh  meson.build  meson_options.txt  mk-meson.sh  x.sh
buildtools/: map_to_def.py
conf/: meson.build
conf/mk/: cc.flags.mk.in  cc.mk.in  meson.build
conf/scripts/: copy_to_source.py  gen_config_files.py  get_cpu_vendor.bat  get_cpu_vendor.sh  get_spdk_version.py  meson.build
examples/accel/perf/: meson.build
examples/bdev/fio_plugin/: meson.build
examples/bdev/hello_world/: meson.build
examples/blob/cli/: meson.build
examples/blob/hello_world/: meson.build
examples/ioat/perf/: meson.build
examples/ioat/verify/: meson.build
examples/nvme/abort/: meson.build
examples/nvme/arbitration/: meson.build
examples/nvme/cmb_copy/: meson.build
examples/nvme/hello_world/: meson.build
examples/nvme/hotplug/: meson.build
examples/nvme/identify/: meson.build
examples/nvme/nvme_manage/: meson.build
examples/nvme/reconnect/: meson.build
examples/nvmf/nvmf/: meson.build
examples/sock/hello_world/: meson.build
examples/vmd/led/: meson.build
examples/vmd/lsvmd/: meson.build
include/spdk/: nvme_spec.h
include/windows/: poll.h  pthread.h  semaphore.h  strings.h  syslog.h  unistd.h
include/windows/linux/: version.h
include/windows/openssl/: md5.h
include/windows/sys/: file.h  ioctl.h  mman.h  resource.h  socket.h  uio.h  wait.h
lib/: meson.build
lib/accel/: meson.build
lib/bdev/: meson.build
lib/blob/: meson.build
lib/blobfs/: meson.build
lib/conf/: meson.build
lib/env_dpdk/: env.c  env.mk  memory.c  meson.build  pci.c
lib/env_ocf/: meson.build
lib/event/: meson.build  reactor.c
lib/ftl/: ftl_debug.h  meson.build
lib/idxd/: meson.build
lib/ioat/: meson.build
lib/iscsi/: iscsi_subsystem.c  meson.build
lib/json/: meson.build
lib/jsonrpc/: meson.build
lib/log/: meson.build
lib/log_rpc/: meson.build
lib/lvol/: meson.build
lib/nbd/: meson.build
lib/net/: meson.build
lib/notify/: meson.build
lib/nvme/: meson.build
lib/nvmf/: meson.build
lib/rdma/: meson.build
lib/reduce/: meson.build
lib/rocksdb/: meson.build  spdk_rocksdb.map
lib/rpc/: meson.build
lib/rte_vhost/: meson.build
lib/scsi/: meson.build
lib/sock/: meson.build
lib/thread/: meson.build
lib/trace/: meson.build
lib/ut_mock/: meson.build
lib/util/: math.c  meson.build
lib/vhost/: meson.build
lib/virtio/: meson.build
lib/vmd/: meson.build
mk/: spdk.app_vars.mk  spdk.common.mk  spdk.mock.unittest.mk  spdk.modules.mk  spdk.unittest.mk
module/accel/: meson.build
module/accel/idxd/: meson.build
module/accel/ioat/: meson.build
module/bdev/: Makefile  meson.build
module/bdev/aio/: meson.build
module/bdev/compress/: meson.build
module/bdev/crypto/: meson.build
module/bdev/delay/: meson.build
module/bdev/error/: meson.build
module/bdev/ftl/: meson.build
module/bdev/gpt/: meson.build
module/bdev/iscsi/: meson.build
module/bdev/lvol/: meson.build
module/bdev/malloc/: meson.build
module/bdev/null/: meson.build
module/bdev/nvme/: meson.build
module/bdev/ocf/: meson.build
module/bdev/passthru/: meson.build
module/bdev/pmem/: meson.build
module/bdev/raid/: meson.build
module/bdev/rbd/: meson.build
module/bdev/rpc/: meson.build
module/bdev/split/: meson.build
module/bdev/uring/: meson.build
module/bdev/virtio/: meson.build
module/bdev/zone_block/: meson.build
module/blob/: meson.build
module/blob/bdev/: meson.build
module/blobfs/: meson.build
module/blobfs/bdev/: meson.build
module/env_dpdk/: meson.build
module/event/: meson.build
module/event/rpc/: meson.build
module/event/subsystems/: meson.build
module/event/subsystems/accel/: meson.build
module/event/subsystems/bdev/: meson.build
module/event/subsystems/iscsi/: meson.build
module/event/subsystems/nbd/: meson.build
module/event/subsystems/net/: meson.build
module/event/subsystems/nvmf/: meson.build
module/event/subsystems/scsi/: meson.build
module/event/subsystems/sock/: meson.build
module/event/subsystems/vhost/: meson.build
module/event/subsystems/vmd/: meson.build
module/sock/: meson.build
module/sock/posix/: meson.build  posix.c
module/sock/uring/: meson.build
module/sock/vpp/: meson.build
scripts/: detect_cc.sh
scripts/rpc/: client.py
test/common/: autotest_common.sh
test/unit/lib/bdev/bdev.c/: bdev_ut.c
test/unit/lib/bdev/bdev_ocssd.c/: bdev_ocssd_ut.c
test/unit/lib/bdev/mt/bdev.c/: bdev_ut.c
test/unit/lib/bdev/raid/bdev_raid.c/: bdev_raid_ut.c
test/unit/lib/bdev/vbdev_lvol.c/: vbdev_lvol_ut.c
test/unit/lib/bdev/vbdev_zone_block.c/: vbdev_zone_block_ut.c
test/unit/lib/blob/: Makefile
test/unit/lib/event/app.c/: app_ut.c
test/unit/lib/event/reactor.c/: reactor_ut.c
test/unit/lib/iscsi/conn.c/: conn_ut.c
test/unit/lib/iscsi/init_grp.c/: init_grp_ut.c
test/unit/lib/iscsi/iscsi.c/: iscsi_ut.c
test/unit/lib/iscsi/portal_grp.c/: portal_grp_ut.c
test/unit/lib/iscsi/tgt_node.c/: tgt_node_ut.c
test/unit/lib/nvme/nvme_ctrlr.c/: nvme_ctrlr_ut.c
test/unit/lib/nvme/nvme_ctrlr_cmd.c/: nvme_ctrlr_cmd_ut.c
test/unit/lib/nvme/nvme_ns_cmd.c/: nvme_ns_cmd_ut.c
test/unit/lib/nvme/nvme_ns_ocssd_cmd.c/: nvme_ns_ocssd_cmd_ut.c
test/unit/lib/nvmf/ctrlr.c/: ctrlr_ut.c
test/unit/lib/nvmf/ctrlr_bdev.c/: ctrlr_bdev_ut.c
test/unit/lib/nvmf/ctrlr_discovery.c/: ctrlr_discovery_ut.c
test/unit/lib/nvmf/subsystem.c/: subsystem_ut.c
test/unit/lib/nvmf/tcp.c/: tcp_ut.c
test/unit/lib/scsi/dev.c/: dev_ut.c
test/unit/lib/scsi/lun.c/: lun_ut.c
test/unit/lib/sock/sock.c/: sock_ut.c
test/unit/lib/util/string.c/: string_ut.c
